--- a/templates/distributor/d_all_distributor.html
+++ b/templates/distributor/d_all_distributor.html
@@ -26,7 +26,7 @@
         {% endwith %}
 
         <!-- Display Total Managers and Activated Managers Count -->
-        <p><b>Total Distributors: {{ distributor_count }}</b></p>
+        <p><b>Total Distributors: {{ total_distributors_count }}</b></p>
         <!-- Filters -->
         <div class="row">
             <div class="col-md-3 mb-4">
