--- a/templates/super_distributor/sd_all_distributor.html
+++ b/templates/super_distributor/sd_all_distributor.html
@@ -10,7 +10,7 @@
     <main>
         <div class="container-fluid px-4">
             <h2 class="text-center">Super Distributors List</h2>
-            <p><b>Total S-Distributors - {{super_distributor_count}}</b></p>
+            <p><b>Total Distributors - {{super_distributor_count}}</b></p>
         <!-- Display flash messages for success or error -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
