--- a/templates/distributor/d_orders.html
+++ b/templates/distributor/d_orders.html
@@ -94,6 +94,7 @@
 
             
         </div>
-        {% include 'sd_footer.html' %}
     </main>
+    
+    {% include 'admin/admin_footer.html' %}
 </div>
