--- a/templates/order/kitchen_order.html
+++ b/templates/order/kitchen_order.html
@@ -16,6 +16,9 @@
                 <div class="row mb-4">
                     <form class="row g-3" method="GET" action="{{ url_for('order.kitchen_orders') }}">
                         <!-- Filter by Kitchen -->
+                        {% if role == 'Kitchen' %}
+                        <p></p>
+                        {% else %}
                         <div class="col-md-3">
                             <label for="kitchen_filter">Filter by Kitchen:</label>
                             <select name="kitchen_id" id="kitchen_filter" class="form-select" onchange="this.form.submit()">
@@ -27,6 +30,7 @@
                                 {% endfor %}
                             </select>
                         </div>
+                        {% endif %}
 
                         <!-- Filter by Status -->
                         <div class="col-md-3">
@@ -67,7 +71,11 @@
                                     <th>Items Name</th>
                                     <th>Quantity</th>
                                     <th>Total Amount</th>
+                                    {% if role == 'Kitchen' %}
+                                    
+                                    {% else %}
                                     <th>Kitchen Name</th>
+                                    {% endif %}
                                     <th>Created At</th>
                                     <th>Status</th>
                                 </tr>
@@ -90,7 +98,11 @@
                                         {% endfor %}
                                     </td>
                                     <td>₹{{ order.total_amount }}</td>
+                                    {% if role == 'Kitchen' %}
+                                    
+                                    {% else %}
                                     <td>{{ order.kitchen_name }}</td>
+                                    {% endif %}
                                     <td>{{ order.created_at }}</td>
                                     <td>{{ order.status }}</td>
                                 </tr>
